--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
     sdk: flutter
   charts_flutter: ^0.9.0
   http: ^0.12.2
+  shared_preferences: ^0.5.10
 
 
   # The following adds the Cupertino Icons font to your application.
