--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ version: 1.0.0+1
 
 
 environment:
-   sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -28,6 +28,7 @@ dependencies:
   http: ^0.12.2
   shared_preferences: ^0.5.10
   sqflite: any
+  path_provider: ^1.6.14
 
 
   # The following adds the Cupertino Icons font to your application.
